--- a/src/ShakeBugs.MAUI/ShakeBugs.MAUI.csproj
+++ b/src/ShakeBugs.MAUI/ShakeBugs.MAUI.csproj
@@ -43,6 +43,9 @@
 	</ItemGroup>
 	<ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">
 		<PackageReference Include="Com.Shakebugs.Shake" Version="16.2.5" />
+		<PackageReference Include="Org.Mp4parser.Muxer" Version="1.9.41.2" />
+		<PackageReference Include="Io.CoilKt.Coil" Version="2.0.0.2" />
+		<PackageReference Include="Io.CoilKt.CoilBase" Version="2.0.0.2" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
