--- a/src/ShakeBugsMauiQs/ShakeBugsMauiQs.csproj
+++ b/src/ShakeBugsMauiQs/ShakeBugsMauiQs.csproj
@@ -25,6 +25,11 @@
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-ios|AnyCPU'">
 	  <CreatePackage>false</CreatePackage>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)'=='net8.0-ios'">
+	  <CodesignKey>Apple Development: Created via API (X3MP9CYJPQ)</CodesignKey>
+	  <CodesignProvision>VS: WildCard Development</CodesignProvision>
 	</PropertyGroup>	
 	<ItemGroup>
 		<!-- App Icon -->
@@ -50,11 +55,58 @@
 	</ItemGroup>
 	<ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">
 		<PackageReference Include="Com.Shakebugs.Shake" Version="16.2.5" />
-		<PackageReference Include="Org.Mp4parser.Muxer" Version="1.9.41.2" />
+		<PackageReference Include="Org.Mp4parser.Muxer" Version="1.9.56" />
 		<PackageReference Include="Io.CoilKt.Coil" Version="2.0.0.2" />
 		<PackageReference Include="Io.CoilKt.CoilBase" Version="2.0.0.2" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\ShakeBugs.MAUI\ShakeBugs.MAUI.csproj" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+	  <PackageReference Include="Org.Jetbrains.Kotlin.KotlinParcelizeRuntime">
+	    <Version>1.9.10</Version>
+	  </PackageReference>
+	  <PackageReference Include="Org.Slf4j.Slf4jApi">
+	    <Version>1.8.0-beta4</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Activity">
+	    <Version>1.9.0.1</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Activity.Ktx">
+	    <Version>1.9.0.1</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.AppCompat">
+	    <Version>1.6.1.8</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Collection">
+	    <Version>1.4.0.3</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Collection.Ktx">
+	    <Version>1.4.0.2</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Core">
+	    <Version>1.13.1</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Lifecycle.Common">
+	    <Version>2.7.0.2</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Lifecycle.Runtime.Ktx">
+	    <Version>2.7.0.2</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Lifecycle.ViewModel">
+	    <Version>2.7.0.2</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Lifecycle.ViewModel.Ktx">
+	    <Version>2.7.0.2</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Work.Runtime">
+	    <Version>2.9.0.2</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.Kotlin.StdLib">
+	    <Version>1.9.23.1</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.Kotlin.StdLib.Jdk8">
+	    <Version>1.9.23.1</Version>
+	  </PackageReference>
 	</ItemGroup>
 </Project>
