--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -24,6 +24,12 @@ jobs:
       run: |
         dotnet workload install ios android maui maui-ios maui-android
 
+    - name: Setup Java 11
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'microsoft'
+        java-version: '11'
+  
     - name: Build
       run: |
         sh build.sh
